[gd_scene load_steps=29 format=3 uid="uid://gu3gwtt5y85h"]

[ext_resource type="Script" path="res://enemy_loader/enemies/big_boss/big_boss.gd" id="1_b3qpe"]
[ext_resource type="PackedScene" uid="uid://ov7m2pidw7r6" path="res://enemy_loader/enemies/big_boss/laser_blast.tscn" id="2_02tlj"]
[ext_resource type="Script" path="res://scene_manager/resource/scene_link.gd" id="2_oth3w"]
[ext_resource type="Script" path="res://enemy_loader/node/enemy_health/enemy_health.gd" id="3_58mpu"]
[ext_resource type="Script" path="res://audio/sfx/resources/sf_link.gd" id="4_46mne"]
[ext_resource type="PackedScene" uid="uid://bfpmql11g11qv" path="res://enemy_loader/enemies/bub/bub_jitter.tscn" id="4_dsyun"]
[ext_resource type="PackedScene" uid="uid://c3o7hm0ljfpth" path="res://enemy_loader/enemies/dial/dial.tscn" id="5_a5wl0"]
[ext_resource type="PackedScene" uid="uid://v0ig1j0vucnl" path="res://enemy_loader/node/enemy_module/enemy_module.tscn" id="7_v82a4"]
[ext_resource type="Texture2D" uid="uid://bfh3pp8wgmbgf" path="res://raw_assets/test_sprites/monster1.png" id="7_xq82a"]
[ext_resource type="Texture2D" uid="uid://cktdqr8h2fnsy" path="res://raw_assets/test_sprites/monster2.png" id="8_b5hkn"]
[ext_resource type="Script" path="res://enemy_loader/resources/enemy_link.gd" id="8_yxejo"]
[ext_resource type="Script" path="res://enemy_loader/resources/enemy_command.gd" id="9_cowgn"]

[sub_resource type="Resource" id="Resource_bsciy"]
script = ExtResource("2_oth3w")
scene_name = "you_won"

[sub_resource type="Resource" id="Resource_hyx8l"]
script = ExtResource("4_46mne")
sf_name = "planet_death"
sf_vol = -8.0

[sub_resource type="SpriteFrames" id="SpriteFrames_awpk1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_xq82a")
}, {
"duration": 1.0,
"texture": ExtResource("8_b5hkn")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ovi14"]
bg_color = Color(0.258824, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwqfw"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6san6"]
size = Vector2(33, 15)

[sub_resource type="Resource" id="Resource_x88dc"]
script = ExtResource("8_yxejo")
enemy_name = "bub_jitter_down"

[sub_resource type="Resource" id="Resource_o3w4t"]
script = ExtResource("9_cowgn")
comm_title = "delay"
comm = 1
par = {
"enemy": SubResource("Resource_x88dc"),
"time": 2.0
}

[sub_resource type="Resource" id="Resource_jqfwn"]
script = ExtResource("8_yxejo")
enemy_name = "bub_jitter_down"

[sub_resource type="Resource" id="Resource_agpff"]
script = ExtResource("9_cowgn")
comm_title = "bub left"
comm = 0
par = {
"enemy": SubResource("Resource_jqfwn"),
"position": Vector2i(10, -25)
}

[sub_resource type="Resource" id="Resource_nwfg4"]
script = ExtResource("9_cowgn")
comm_title = "bub left"
comm = 0
par = {
"enemy": SubResource("Resource_jqfwn"),
"position": Vector2i(30, -5)
}

[sub_resource type="Resource" id="Resource_ww8gk"]
script = ExtResource("9_cowgn")
comm_title = "bub left"
comm = 0
par = {
"enemy": SubResource("Resource_jqfwn"),
"position": Vector2i(55, -18)
}

[sub_resource type="Resource" id="Resource_3bsp8"]
script = ExtResource("9_cowgn")
comm_title = "bub left"
comm = 0
par = {
"enemy": SubResource("Resource_jqfwn"),
"position": Vector2i(80, -10)
}

[sub_resource type="Resource" id="Resource_twqtf"]
script = ExtResource("9_cowgn")
comm_title = "bub left"
comm = 0
par = {
"enemy": SubResource("Resource_jqfwn"),
"position": Vector2i(100, -12)
}

[sub_resource type="Resource" id="Resource_b2vqt"]
script = ExtResource("9_cowgn")
comm_title = "delay"
comm = 1
par = {
"time": 4.5
}

[sub_resource type="Resource" id="Resource_flkie"]
script = ExtResource("9_cowgn")
comm_title = "command_title"
comm = 2
par = {
"index": 0,
"time": 1000.0
}

[node name="big_boss" type="Node2D" node_paths=PackedStringArray("progress_bar", "next_timer", "laser_timer", "boss_anim", "kill_timer")]
script = ExtResource("1_b3qpe")
progress_bar = NodePath("boss/hp")
next_timer = NodePath("next_scene")
laser_timer = NodePath("laser_timer")
blast_ref = ExtResource("2_02tlj")
win_scene = SubResource("Resource_bsciy")
boss_anim = NodePath("boss_anim")
kill_timer = NodePath("kill_timer")
bub_ref = ExtResource("4_dsyun")
dial_ref = ExtResource("5_a5wl0")
planet_death_sf = SubResource("Resource_hyx8l")

[node name="next_scene" type="Timer" parent="."]
wait_time = 9.0
one_shot = true

[node name="boss_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(62, 32)
sprite_frames = SubResource("SpriteFrames_awpk1")
autoplay = "default"
frame_progress = 0.781463
offset = Vector2(0.5, 0)

[node name="boss" type="Node2D" parent="."]

[node name="hp" type="ProgressBar" parent="boss"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
light_mask = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 117.0
offset_bottom = 12.0
theme_override_styles/background = SubResource("StyleBoxFlat_ovi14")
theme_override_styles/fill = SubResource("StyleBoxFlat_fwqfw")
max_value = 400.0
value = 400.0
show_percentage = false

[node name="enemy_health" type="Node2D" parent="boss" node_paths=PackedStringArray("enemy_node")]
position = Vector2(64, 48)
script = ExtResource("3_58mpu")
hp = 400
mhp = 400
enemy_node = NodePath("..")
score_value = 999999

[node name="hit_shape" type="Area2D" parent="boss/enemy_health"]
collision_layer = 2
collision_mask = 16

[node name="hit_shape" type="CollisionShape2D" parent="boss/enemy_health/hit_shape"]
position = Vector2(0.5, -3.5)
shape = SubResource("RectangleShape2D_6san6")

[node name="enemy_module" parent="boss" instance=ExtResource("7_v82a4")]
position = Vector2(64, 48)
send_onready = true
enemy_arr = Array[ExtResource("9_cowgn")]([SubResource("Resource_o3w4t"), SubResource("Resource_agpff"), SubResource("Resource_nwfg4"), SubResource("Resource_ww8gk"), SubResource("Resource_3bsp8"), SubResource("Resource_twqtf"), SubResource("Resource_b2vqt"), SubResource("Resource_flkie")])

[node name="laser_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="kill_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="bub_timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="dial_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="next_scene" to="." method="_on_next_scene_timeout"]
[connection signal="dead" from="boss/enemy_health" to="." method="_on_enemy_health_dead"]
[connection signal="hit" from="boss/enemy_health" to="." method="_on_enemy_health_hit"]
[connection signal="area_entered" from="boss/enemy_health/hit_shape" to="boss/enemy_health" method="_on_hit_shape_area_entered"]
[connection signal="timeout" from="laser_timer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="kill_timer" to="." method="_on_kill_timer_timeout"]
[connection signal="timeout" from="bub_timer" to="." method="_on_bub_timer_timeout"]
[connection signal="timeout" from="dial_timer" to="." method="_on_dial_timer_timeout"]
